--- a/vignettes/MATH4753BIPLOTl.Rmd
+++ b/vignettes/MATH4753BIPLOTl.Rmd
@@ -1,10 +1,8 @@
 ---
-title: "MATH4753BROSAlab4"
-author: "Brandan Rosa"
-output: 
-    rmarkdown::html_vignette:
+title: "Lab 4: The Biplot Package"
+output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{MATH4753BROSAlab4}
+  %\VignetteIndexEntry{Lab 4: The Biplot Package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -63,5 +61,19 @@ print(c)
 summary(c)
 ```
 
-We can see that as we choose larger values of $k$, the more data points are classified "in"; which of course makes perfect sense.
+We can see that as we choose larger values of $k$, the more data points are classified "in"; which of course makes perfect sense, statistically. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
